--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+
+.toast-top-right {
+  top: 1rem;
+  right: 1rem;
+}
+
+.toast-success {
+  background-color: #28a745 !important;
+  color: #fff !important;
+  font-weight: bold;
+
+}
+
+.toast-error {
+  background-color: #dc3545 !important;
+  color: #fff !important;
+  font-weight: bold;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
