--- a/src/app/components/unauthorized/unauthorized.component.html
+++ b/src/app/components/unauthorized/unauthorized.component.html
@@ -1,5 +1,4 @@
 <!-- unauthorized.component.html -->
 <div class="container text-center mt-5">
-  <h2 class="text-danger">🚫 ممنوع الدخول</h2>
-  <p>أنت مش مسموحلك تشوف الصفحة دي</p>
+  <h2 class="text-danger">ممنوع الدخول</h2>
 </div>
